@@ -1,3 +1,7 @@
+2012-04-17
+* replace glob.glob() with our own filtering. This prevents os.listdir() from
+being called numerous times
+
 2012-03-29
 * add a very simplistic method to tag binary XML for Android (file name check,
 plus the first four bytes)
